--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "vue": "^2.7.16"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.3.6",
+    "@eslint/js": "^9.37.0",
     "@vitest/ui": "^2.1.8",
+    "@vue/test-utils": "^1.3.6",
+    "eslint": "^9.37.0",
+    "eslint-plugin-vue": "^10.5.1",
+    "globals": "^16.4.0",
     "jsdom": "^25.0.1",
     "vite": "npm:rolldown-vite@7.1.14",
-    "vite-standard": "npm:vite@^6.0.7",
     "vite-plugin-vue2": "^2.0.3",
-    "vitest": "^2.1.8"
+    "vite-standard": "npm:vite@^6.0.7",
+    "vitest": "^2.1.8",
+    "vue-eslint-parser": "^10.2.0"
   },
   "pnpm": {
     "overrides": {
