--- a/package.json
+++ b/package.json
@@ -11,30 +11,19 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix"
   },
   "dependencies": {
     "vue": "^2.7.16"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "@vitest/ui": "^2.1.8",
+    "@vitest/ui": "^4.0.1",
     "@vue/test-utils": "^1.3.6",
-    "eslint": "^9.37.0",
-    "eslint-plugin-vue": "^10.5.1",
-    "globals": "^16.4.0",
-    "jsdom": "^25.0.1",
-    "vite": "npm:rolldown-vite@7.1.14",
-    "vite-plugin-vue2": "^2.0.3",
-    "vite-standard": "npm:vite@^6.0.7",
-    "vitest": "^2.1.8",
-    "vue-eslint-parser": "^10.2.0"
-  },
-  "pnpm": {
-    "overrides": {
-      "vite": "npm:rolldown-vite@7.1.14",
-      "vitest>vite": "npm:vite@^6.0.7"
-    }
+    "jsdom": "^27.0.1",
+    "oxlint": "^1.24.0",
+    "vite": "npm:rolldown-vite@7.1.19",
+    "@vitejs/plugin-vue2": "^2.3.3",
+    "vitest": "^4.0.1"
   }
 }
